# poc_turiyatree

./: pyproject.toml
.devcontainer/: devcontainer.json
turibot/: chat.py
