[project]
name = "poc-local"
version = "0.1.0"
description = ""
authors = [
    {name = "Sidharth-T3",email = "sidharth@turiyatree.com"}
]
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.53.0,<2.0.0)"
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
